--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,3 +36,7 @@ models:
     # Applies to all files under models/example/
     example:
       materialized: view
+    bidw:
+      materialized: table
+    stg:
+      materialized: view
